# task-tracker

./: .gitmodules  CMakeLists.txt  LICENSE  icons.qrc  q
task-tracker-backend/: Account.hpp  Project.hpp  ResponseHelper.hpp  Task.hpp  TaskComment.hpp  build.gradle  main.cpp  task-tracker-backend_ru_RU.ts
task-tracker-backend/src/main/kotlin/: Application.kt  ByteArrayJsonSerializer.kt  Comment.kt  CommentController.kt  CommentRepository.kt  Notification.kt  NotificationController.kt  NotificationRepository.kt  Permission.kt  Project.kt  ProjectController.kt  ProjectRepository.kt  ProjectUserRole.kt  ProjectUserRoleController.kt  ProjectUserRoleRepository.kt  Role.kt  RoleController.kt  RoleRepository.kt  TagCaption.kt  TagCaptionController.kt  TagCaptionRepository.kt  TagValue.kt  TagValueController.kt  TagValueRepository.kt  Task.kt  TaskController.kt  TaskRepository.kt  TaskTag.kt  TaskTagController.kt  TaskTagRepository.kt  User.kt  UserController.kt  UserRepository.kt
task-tracker-backend/src/main/resources/: application.properties
task-tracker-frontend/: AbstractPage.cpp  AbstractPage.h  AuthorizationWidget.cpp  AuthorizationWidget.h  AuthorizationWidget.ui  AuthorizationWindow.cpp  AuthorizationWindow.h  AuthorizationWindow.ui  Backend.cpp  Backend.h  CommentWidgetItem.cpp  CommentWidgetItem.h  CommentWidgetItem.ui  Context.cpp  Context.h  CreateProjectDialog.cpp  CreateProjectDialog.h  CreateProjectDialog.ui  DataClasses.cpp  DataClasses.h  DateTimePropertyWidget.cpp  DateTimePropertyWidget.h  DateTimePropertyWidget.ui  GreetingsWidget.cpp  GreetingsWidget.h  GreetingsWidget.ui  IntegerSelectorWidget.cpp  IntegerSelectorWidget.h  IntegerSelectorWidget.ui  IssueWidget.cpp  IssueWidget.h  IssueWidget.ui  LabelPropertyWidget.cpp  LabelPropertyWidget.h  LabelPropertyWidget.ui  ListViewDelegate.cpp  LoadingBar.cpp  LoadingBar.h  LoadingBar.ui  MainWindow.cpp  (+57 more)
